user story 1 and 2

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body>
-    Hello World, we are software developers!
+    <div >
+      <h1 id="title">Survey form</h1>
+      <p id="description">this is the first survey</p>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
