adding a form and its label

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,6 +11,12 @@
       <h1 id="title">Survey form</h1>
       <p id="description">this is the first survey</p>
     </div>
+    <div>
+      <form action="" id="survey-form">
+        <label for="" >name</label>
+        <input type="text" id="name">
+      </form>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
