--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -13,8 +13,14 @@
     </div>
     <div>
       <form action="" id="survey-form">
-        <label for="" >name</label>
-        <input type="text" id="name">
+        <div>
+          <label for="name" >name</label>
+          <input type="text" id="name">
+        </div>
+        <div>
+          <label for="email" >email</label>
+          <input type="email" id="email" required>
+        </div>
       </form>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
