added number to the form element

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -21,6 +21,10 @@
           <label for="email" >email</label>
           <input type="email" id="email" required>
         </div>
+        <div>
+          <label for="number" >number</label>
+          <input type="number" id="number" required>
+        </div>
       </form>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
