--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -14,16 +14,16 @@
     <div>
       <form action="" id="survey-form">
         <div>
-          <label for="name" >name</label>
+          <label id="name-label" for="name" >name</label>
           <input type="text" id="name">
         </div>
         <div>
-          <label for="email" >email</label>
+          <label id="email-label" for="email" >email</label>
           <input type="email" id="email" required>
         </div>
         <div>
-          <label for="number" >number</label>
-          <input type="number" id="number" required>
+          <label id="number-label" for="number" >number</label>
+          <input type="number" id="number" min="10" max="20" required>
         </div>
       </form>
     </div>
