users story 14 and 15

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -32,6 +32,16 @@
             <option value="">3</option>
           </select>
         </div>
+        <div>
+          <input value="1" type="radio" name="groupe1" />
+          <input value="2" type="radio" name="groupe1" />
+          <input value="3" type="radio" name="groupe1" />
+        </div>
+        <div>
+          <input value="1" type="checkbox" />
+          <input value="2" type="checkbox"/>
+          <input value="3" type="checkbox" />
+        </div>
       </form>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
