added a textarea and a submit button

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -15,7 +15,7 @@
       <form action="" id="survey-form">
         <div>
           <label id="name-label" for="name" >name</label>
-          <input type="text" id="name" placeholder="name">
+          <input type="text" id="name" placeholder="name" required>
         </div>
         <div>
           <label id="email-label" for="email" >email</label>
@@ -41,6 +41,12 @@
           <input value="1" type="checkbox" />
           <input value="2" type="checkbox"/>
           <input value="3" type="checkbox" />
+        </div>
+        <div>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div>
+          <button id="submit" value="">submit</button>
         </div>
       </form>
     </div>
